# compsec_project_34

./: docker-compose.yaml
axum_api/: Cargo.toml  Dockerfile  insecure.db  schema.sql
axum_api/.sqlx/: query-069c210652fb04d5167fdf870c2a1b49b7e7f570a4f2ab273ba88cc5949bffce.json  query-37f8ca332fcdc749ef5a69fdf0d60e99590b5095d8f9322a89bc40af8ffc82b7.json  query-56bffb3080e06e439429b8e7007374a85cc26d36dd583178f394248d0d4f7450.json  query-57978db9af1d75560d8e6bdb23ebe537bbbd2a447773b50f194b6b2f04bbfc34.json  query-6ccc163b6446764dbbd1e4ac6317d3034db0ca425fc2c2f0a7ec76d5daeaf4cb.json  query-8df7bcf722b7697c5281d746a68bb8450e8634a62d23054b4c0ced3bec2cd6d0.json  query-98f4c0bfff04e07f5d0a46d48a31d24655826eebdf09c7f9f45d770df02035d3.json  query-9a60ae96398dc07faf7360c43ffdbae23577151585dfea78e60dc4f72a49288b.json  query-b1e3cb80855c18e62bab42545c946e7aa0435aca1aa5c667447862bbbd175430.json  query-bdc27f105ac472ccb8a000900992a6b56d2d6da79e65e6ebcb38fe591b0dbba8.json  query-fb45a09cc93b56622c2fec5515740f51f1cc3a6764e4a5dcf2387084a8325b84.json  query-fdac6312a6a12322f1d663c27b608f72481510cca47a2ae47a4a581fd79aeb9b.json
axum_api/src/: authentication.rs  crud_ops.rs  entities.rs  main.rs
frontend/: Dockerfile  README.md  content.html  login.html  register.html
