[package]
name = "axum_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = {version = "0.4.39", features = ["serde"] }
reqwest = { version="0.12.12", features=["json"] }
serde = { version="1.0.217", features=["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "macros", "runtime-tokio", "chrono"] }
tokio = {version="1.43.0", features=["full", "rt-multi-thread"]}
