[package]
name = "axum_api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros"] }
axum-login = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
password-auth = "1.0.0"
reqwest = { version = "0.12.12", features=["json"] }
serde = { version = "1.0.217", features=["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "macros", "runtime-tokio", "chrono"] }
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version= "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tower-sessions = { version = "0.14.0", default-features = false, features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
